--- a/css/style.css
+++ b/css/style.css
@@ -1,201 +1,393 @@
 *,
 *::before,
-*::after{box-sizing:border-box;}
-a{text-decoration:none; color:inherit; cursor:pointer;background-color: transparent;}
-button{background-color:transparent; color:inherit; border-width:0; padding:0; cursor:pointer;}
-figure{margin:0;}
-input::-moz-focus-inner {border:0; padding:0; margin:0;}
-ul, ol, dd{margin:0; padding:0; list-style:none;}
-p{margin:0;}
-cite {font-style:normal;}
-fieldset{border-width:0; padding:0; margin:0;}
-
-html{ 
-  font-size: 16px;
+*::after {
+    box-sizing: border-box;
 }
 
-body {
-  /*font-family: 'Poppins', sans-serif;*/
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.3em;
-  color: #222;
+/* start general */
+.page {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 1.125em;
+    min-width: 375px;
+    background-image: url(../img/bg-hero-mobile.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
-html {
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-body {
-  margin: 0;
-}
-
-main {
-  display: block;
-}
-
-b,
-strong {
-  font-weight: bolder;
+.container {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 16px;
+    box-shadow: 0px 0px 10px 2px rgb(0, 0, 0, .1);
 }
 
 img {
-  border-style: none;
+    width: 100%;
 }
 
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15em; /* 1 */
-  margin: 0; /* 2 */
+.link {
+    text-decoration: none;
 }
 
-button,
-input { /* 1 */
-  overflow: visible;
+.list {
+    list-style: none;
 }
 
-button,
-select { /* 1 */
-  text-transform: none;
+.title {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
+.copy {
+    margin: 0 auto;
+    width: 90%;
 }
 
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
+/* end general */
+/* start header  */
+.page__header {
+    background: rgba(235, 251, 255, .4);
 }
 
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+.page__header .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 25px;
+    padding-bottom: 80px;
+    box-shadow: none;
 }
 
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
+.header__logo {
+    width: 100px;
 }
 
-textarea {
-  overflow: auto;
+.header__link {
+    color: rgb(0, 0, 0);
+    font-size: .625rem;
+    font-weight: 700;
+    background: rgb(255, 255, 255);
+    padding: .5em 2.1em;
+    border-radius: 3.75em;
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, .1);
 }
 
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+.group {
+    text-align: center;
 }
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
+/* end header */
+/* start main */
+.page__content {
+    position: relative;
 }
 
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
+/* start article - hero */
+
+.hero {
+    padding-bottom: 33px;
+    background: rgba(235, 251, 255, .4);
 }
 
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+.hero .container {
+    box-shadow: none;
 }
 
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
+.hero .group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-/**********************************************************************************/
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
+.hero__title {
+    font-size: 1.5625rem;
+    line-height: 1.45;
+    letter-spacing: -.6px;
+    text-align: center;
+    margin-bottom: 20px;
+    width: 92%;
+    margin-top: 1px;
 }
 
-
-
-section:nth-child(odd) {
-  background: lightgray;
+.hero__copy {
+    text-align: center;
+    letter-spacing: -.9px;
 }
 
-/*******************************************************************************/
-input, textarea {
-  font-size: 1em;
+.hero__link {
+    font-size: .75rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    background: rgb(255, 82, 191);
+    padding: 1em 5em;
+    border-radius: 2em;
+    margin-top: 33px;
 }
 
-label, small, caption {
-  font-size: .8em;
-  opacity: 70%;
+.hero__img {
+    align-self: center;
+    width: 89%;
+    margin-top: 53px;
 }
 
-h1 {
-  font-size: 3.33em;
-  letter-spacing: -.045em;
+/* end article - hero */
+/* start article - grow */
+.grow {
+    margin-bottom: 39px;
+    margin-top: 61px;
 }
 
-h2 {
-  font-size: 2.44em;
-  letter-spacing: -.035em;
-}
-h3 {
-  font-size: 1.96em;
-  letter-spacing: -.025em;
+.grow__img {
+    align-self: center;
+    width: 70%;
+    margin-top: 57px;
 }
 
-h4 {
-  font-size: 1.56em;
-  letter-spacing: -.015em;
+.group__grow {
+    text-align: center;
+    margin-top: 56px;
 }
 
-h5 {
-  font-size: 1.25em;
+.grow__title {
+    font-size: 1.25rem;
+    margin-bottom: 14px;
 }
 
-h1,h2,h3,h4,h5 {
-  line-height: 1.2em;
-  margin-top: .3em;
-  text-transform: uppercase;
-  font-weight:inherit;
+.grow__copy {
+    font-size: .9375rem;
+    width: 81%;
+    letter-spacing: -.5px;
+    line-height: 1.38;
+    margin-bottom: 35px;
+
 }
 
-
-/* voor kleinere schermen 
-
-label, small, caption {
-  font-size: .83em;
-  opacity: 70%;
+/* end article - grow */
+/* start article - flowing */
+.flowing {
+    margin-bottom: 39px;
 }
 
-h1 {
-  font-size: 2.49em;
+.flowing .group {
+    margin-top: 69px;
 }
 
-h2 {
-  font-size: 2.07em;
-}
-h3 {
-  font-size: 1.73em;
+.flowing__img {
+    margin-top: 67px;
+    width: 71%
 }
 
-h4 {
-  font-size: 1.44em;
+.flowing__title {
+    font-size: 1.25rem;
+    margin-bottom: 14px;
 }
 
-h5 {
-  font-size: 1.2em;
+.flowing__copy {
+    font-size: .9375rem;
+    width: 77%;
+    letter-spacing: -.5px;
+    line-height: 1.38;
+    margin-bottom: 55px;
 }
+
+/* end article - flowing */
+/* start article - users */
+.users {
+    margin-bottom: 122px;
+}
+
+.users .group {
+    margin-top: 61px;
+}
+
+.users__img {
+    margin-top: 60px;
+    width: 73%;
+}
+
+.users__title {
+    font-size: 1.25rem;
+    margin-bottom: 14px;
+}
+
+.users__copy {
+    font-size: .9375rem;
+    width: 73%;
+    letter-spacing: -.5px;
+    line-height: 1.38;
+    margin-bottom: 34px;
+}
+
+/* end article - users */
+/* start article - cta */
+.cta {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -296px;
+    z-index: 1;
+}
+
+.cta .container {
+    width: 93%;
+    background: rgb(255, 255, 255);
+}
+
+.cta__title {
+    font-size: 1.125rem;
+    margin-top: 42px;
+}
+
+.cta__link {
+    font-size: .625rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    background: rgb(255, 82, 191);
+    padding: 1.3em 5em;
+    border-radius: 2em;
+    margin-top: 25px;
+    margin-bottom: 41px;
+}
+
+/* end article - cta */
+
+/* end main */
+/* start footer  */
+.page__footer {
+    margin-top: 228px;
+    padding-bottom: 1px;
+    background: hsl(192, 100%, 9%);
+    position: relative;
+}
+
+.page__footer .container {
+    filter: brightness(0) invert(1);
+    align-items: flex-start;
+    width: 91%;
+    box-shadow: none;
+}
+
+.footer__logo {
+    margin-top: 136px;
+    width: 70%;
+}
+
+.footer__list {
+    padding: 0;
+    font-size: 1rem;
+}
+
+.footer__list--connect {
+    margin-top: 20px;
+    width: 99%;
+    line-height: 1.5;
+    position: relative;
+}
+
+.footer__list--connect .footer__list-item::before {
+    content:'';
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-top: 9px;
+    position: absolute;
+    left: 0;
+}
+
+.footer__list--us {
+    margin-top: 21px;
+}
+
+.footer__list--extra {
+    margin-top: -16px;
+}
+
+.footer__list-item {
+    margin-top: 24px;
+    margin-left: 39px;
+}
+
+.footer__list--us .footer__list-item, .footer__list--extra .footer__list-item {
+    margin-left: 0;
+    margin-top: 19px;
+    font-size: 1.125rem;
+}
+
+.footer__list--us, .footer__list--extra {
+    margin-left: 0;
+}
+
+.footer__list--connect .footer__list-item:first-child {
+    margin-top: 0;
+}
+
+.footer__list--connect .footer__list-item--location::before {
+    background: url('../img/icon-location.svg') no-repeat;
+}
+
+.footer__list--connect .footer__list-item--phone::before {
+    background: url('../img/icon-phone.svg') no-repeat;
+    top: 113px;
+    left: 2px;
+}
+
+.footer__list--connect .footer__list-item--email::before {
+    background: url('../img/icon-email.svg') no-repeat;
+    top: 162px;
+    left: 1px;
+}
+
+.footer__list--social {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.footer__list--social .footer__list-item {
+    margin: 36px 0 0 0;
+}
+
+.footer__list--social .footer__list-item:nth-child(2) {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.social__link {
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 25px;
+}
+
+.social__img {
+    width: 20px;
+    height: 20px;
+    margin: 5px;
+    vertical-align: middle;
+}
+
+.footer__copy {
+    font-size: .6875rem;
+    text-align: center;
+    margin-top: 23px;
+    letter-spacing: .12px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.footer__attr {
+    font-size: .5rem;
+    text-align: center;
+    color: rgb(175, 172, 172);
+}
+
+.attr__link {
+    color: hsl(228, 45%, 44%);
+}
+
+/* end footer  */
