--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
     align-items: center;
     border-radius: 16px;
     box-shadow: 0px 0px 10px 2px rgb(0, 0, 0, .1);
+    background: rgb(255,255,255);
 }
 
 img {
@@ -62,7 +63,6 @@ img {
     align-items: center;
     padding-top: 25px;
     padding-bottom: 80px;
-    box-shadow: none;
 }
 
 .header__logo {
@@ -96,8 +96,9 @@ img {
     background: rgba(235, 251, 255, .4);
 }
 
-.hero .container {
+.page__header .container, .hero .container, .page__footer .container {
     box-shadow: none;
+    background: none;
 }
 
 .hero .group {
@@ -110,14 +111,12 @@ img {
     font-size: 1.5625rem;
     line-height: 1.45;
     letter-spacing: -.6px;
-    text-align: center;
     margin-bottom: 20px;
     width: 92%;
     margin-top: 1px;
 }
 
 .hero__copy {
-    text-align: center;
     letter-spacing: -.9px;
 }
 
@@ -150,7 +149,7 @@ img {
     margin-top: 57px;
 }
 
-.group__grow {
+.group--grow {
     text-align: center;
     margin-top: 56px;
 }
@@ -175,7 +174,7 @@ img {
     margin-bottom: 39px;
 }
 
-.flowing .group {
+.group--flowing {
     margin-top: 69px;
 }
 
@@ -203,7 +202,7 @@ img {
     margin-bottom: 122px;
 }
 
-.users .group {
+.group--users {
     margin-top: 61px;
 }
 
@@ -292,7 +291,7 @@ img {
 }
 
 .footer__list--connect .footer__list-item::before {
-    content:'';
+    content: '';
     display: inline-block;
     width: 20px;
     height: 20px;
@@ -314,13 +313,15 @@ img {
     margin-left: 39px;
 }
 
-.footer__list--us .footer__list-item, .footer__list--extra .footer__list-item {
+.footer__list--us .footer__list-item,
+.footer__list--extra .footer__list-item {
     margin-left: 0;
     margin-top: 19px;
     font-size: 1.125rem;
 }
 
-.footer__list--us, .footer__list--extra {
+.footer__list--us,
+.footer__list--extra {
     margin-left: 0;
 }
 
@@ -386,8 +387,308 @@ img {
     color: rgb(175, 172, 172);
 }
 
-.attr__link {
-    color: hsl(228, 45%, 44%);
+.page__footer .footer__attr--link {
+    margin: 0;
+    color: hsl(322, 100%, 66%);
 }
 
+
 /* end footer  */
+
+@media only screen and (min-width: 600px) {
+
+    /* start header  */
+    .page__header .container {
+        padding-top: 49px;
+    }
+
+    .header__logo {
+        width: 198px;
+        margin-left: 8px;
+    }
+
+    .header__link {
+        font-size: .9375rem;
+        padding: .8667em 4.0667em;
+        margin-right: 9px;
+    }
+
+    /* end header  */
+
+}
+
+@media only screen and (min-width: 1000px) {
+    .page {
+        background: url(../img/bg-hero-desktop.svg) no-repeat;
+        margin: 0 auto;
+        background-size: 100%
+    }
+
+    .container {
+        flex-direction: row;
+        max-width: 1440px;
+    }
+
+    .page__content .container {
+        width: 86%;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding-bottom: 48px;
+    }
+
+        /* start aside - cta   */
+        .cta {
+            bottom: -324px;
+        }
+    
+        .cta .container {
+            width: 56%;
+            flex-direction: column;
+            align-items: center;
+            max-width: 800px;
+        }
+    
+        .cta__title {
+            font-size: 2rem;
+            margin-top: 64px;
+        }
+    
+        .cta__link {
+            font-size: 1.25rem;
+            margin-bottom: 6px;
+            margin-top: 35px;
+        }
+    
+        /* end aside - cta  */
+
+    /* start footer   */
+    .page__footer .container {
+        padding-top: 200px;
+        flex-wrap: wrap;
+        padding-top: 0;
+        width: 88.7%;
+    }
+
+    .page__footer .link {
+        flex: 0 1 100%;
+        margin-left: 36px;
+    }
+
+    .footer__logo {
+        width: 19.5%;
+        margin-top: 191px;
+        margin-bottom: 35px;
+    }
+
+    .footer__list {
+        flex: 0 1 15%;
+        margin: 0;
+    }
+
+    .footer__list--connect {
+        flex-basis: 31%;
+        margin-left: 39px;
+        margin-top: -1px;
+    }
+
+    .footer__list--connect .footer__list-item--phone::before {
+        top: 91px;
+    }
+
+    .footer__list--connect .footer__list-item--email::before {
+        top: 140px;
+    }
+
+    .footer__list-item:first-child {
+        margin-top: 0;
+    }
+
+    .footer__list-item--phone,
+    .footer__list-item--email {
+        margin-left: 3px;
+    }
+
+    .footer__list--social .footer__list-item {
+        margin-top: 0;
+    }
+
+    .footer__list--us {
+        margin-left: 77px;
+    }
+
+    .footer__list--extra {
+        margin-left: 34px;
+    }
+
+    .footer__list--social {
+        margin-left: 53px;
+        margin-top: -1px;
+    }
+
+    .page__footer .social__link {
+        margin: 0;
+    }
+
+    .footer__copy {
+        text-align: right;
+        margin-left: 169px;
+        font-size: .75rem;
+        margin-top: 41px;
+        letter-spacing: -.01px;
+    }
+
+    /* end footer  */
+}
+
+@media only screen and (min-width: 1440px) {
+
+    /* start article - hero  */
+    .hero {
+        padding-bottom: 65px;
+    }
+
+    .hero .container {
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 90%;
+    }
+
+    .hero .group {
+        flex: 0 1 41%;
+        margin-left: 8px;
+        margin-top: 81px;
+        align-items: flex-start;
+        text-align: left;
+    }
+
+    .hero__title {
+        font-size: 2.5625rem;
+        margin: 0;
+    }
+
+    .hero__copy {
+        margin-left: 0;
+        margin-top: 32px;
+        letter-spacing: 0;
+        width: 97%;
+        line-height: 1.45;
+    }
+
+    .hero__img {
+        flex: 0 1 53.5%;
+        margin-right: 10px;
+        margin-top: -14px;
+    }
+
+    .hero__link {
+        font-size: .875rem;
+        padding: 1.286em 4.929em;
+    }
+
+    /* end article - hero */
+    /* start article - grow   */
+    .grow {
+        margin-top: 112px;
+        margin-bottom: 41px;
+    }
+
+    .grow .container {
+        padding-bottom: 52px;
+    }
+
+    .grow__img {
+        order: 1;
+        flex: 0 1 33%;
+        margin-right: 35px;
+        margin-top: 53px;
+    }
+
+    .group--grow {
+        flex: 0 1 48%;
+        text-align: left;
+        margin-left: 123px;
+        margin-top: 156px;
+    }
+
+    .grow__title {
+        font-size: 1.75rem;
+        margin-bottom: 12px;
+        margin-top: -1px
+    }
+
+    .grow__copy {
+        font-size: 1.1875rem;
+        margin: 0;
+    }
+
+
+    /* end article - grow  */
+    /* start article - flowing   */
+    .flowing {
+        margin-bottom: 42px
+    }
+
+    .flowing__img {
+        flex: 0 1 34%;
+        margin-left: 122px;
+        margin-top: 69px;
+    }
+
+    .flowing .container {
+        padding-bottom: 71px;
+    }
+
+    .group--flowing {
+        flex: 0 1 53%;
+        margin-top: 157px;
+        margin-right: -124px;
+        text-align: left;
+    }
+
+    .flowing__title {
+        font-size: 1.75rem;
+        margin-top: -3px;
+        margin-bottom: 13px;
+
+    }
+
+    .flowing__copy {
+        font-size: 1.1875rem;
+        margin: 0;
+    }
+
+    /* end article - flowing  */
+    /* start article - users  */
+    .users__img {
+        order: 1;
+        flex: 0 1 34%;
+        margin: 60px 29px -13px 0;
+    }
+
+    .users .container {
+        padding-bottom: 190px;
+
+    }
+
+    .group--users {
+        flex: 0 1 53%;
+        margin-top: 157px;
+        margin-left: 122px;
+        text-align: left;
+    }
+
+    .users__title {
+        font-size: 1.75rem;
+        margin-bottom: 13px;
+        margin-top: -4px;
+    }
+
+    .users__copy {
+        font-size: 1.1875rem;
+        margin: 0;
+        width: 72%;
+    }
+
+    /* end article - users  */
+
+}
